# ai-agents-the-illustrated-guidebook

./: README.md
03-building-blocks-of-ai-agents/: README.md  pyproject.toml
03-building-blocks-of-ai-agents/src/: 01_custom_tools.py  config.py
ai-agents-projects/agentic-rag/: README.md  pyproject.toml
ai-agents-projects/agentic-rag/src/: client.py  config.py  server.py
ai-agents-projects/financial-analyst/: .gitignore  README.md  ollama.sh  pyproject.toml
ai-agents-projects/financial-analyst/src/: config.py  hack.py  main.py  server.py
ai-agents-projects/financial-analyst/static/: docker
ai-agents-projects/multi-agent-flight-finder/: README.md  ollama.sh  pyproject.toml
ai-agents-projects/multi-agent-flight-finder/src/: browserbase.py  config.py  kayak.py  main.py
building-blocks-of-ai-agents/src/: 02_custom_tools_via_mcp.py  02_custom_tools_via_mcp_server.py
