[project]
name = "03-building-blocks-of-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.165.1",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
]

[tool.isort]
profile = "black"
