[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=0.165.1",
    "dotenv>=0.9.9",
    "litserve>=0.2.15",
    "requests>=2.32.5",
    "tavily-python>=0.7.11",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
]
