[project]
name = "financial-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.165.1",
    "crewai-tools[mcp]>=0.62.3",
    "matplotlib>=3.10.5", # 智能体绘图的依赖，非本项目必须
    "mcp[cli]>=1.13.1",
    "pydantic>=2.11.7",
    "yfinance>=0.2.65",   # 智能体拉取数据的依赖，非本项目必须
]
